fix: Fix spacing on team pages

--- a/src/components/team-join/team-join.css
+++ b/src/components/team-join/team-join.css
@@ -1,15 +1,12 @@
-
 #team-join {
-  padding: 4rem 1rem;
+  /*padding: 4rem 1rem;*/
   font-size: 2rem;
 }
-
 
 #team-join__disclaimer {
   margin: 1rem auto;
   max-width: 60rem;
 }
-
 
 #team-join__actions {
   display: flex;
