--- a/src/pages/team/team-list/team-list.page.css
+++ b/src/pages/team/team-list/team-list.page.css
@@ -1,6 +1,6 @@
 #team-list-page {
   margin: 0 auto;
-  padding: 4rem 1rem;
+  padding: 0 1rem;
   max-width: 100rem;
 }
 
