--- a/src/pages/team/team-welcome/team-welcome.page.css
+++ b/src/pages/team/team-welcome/team-welcome.page.css
@@ -1,6 +1,6 @@
 #team-welcome-page {
   max-width: 100rem;
-  padding: 6rem 1rem;
+  /*padding: 6rem 1rem;*/
   margin: 0 auto;
   font-size: 2rem;
 }
